# krypto

./: appveyor.yml  conanfile.py
src/: CMakeLists.txt
src/krypto/: AlgorytmySymbol.h
test_package/: conanfile.py  example.cpp
